@@ -129,10 +129,10 @@ module BSON
       k = k.to_s
       if check_keys
         if k[0] == ?$
-          raise InvalidName.new("key #{k} must not start with '$'")
+          raise InvalidKeyName.new("key #{k} must not start with '$'")
         end
         if k.include? ?.
-          raise InvalidName.new("key #{k} must not contain '.'")
+          raise InvalidKeyName.new("key #{k} must not contain '.'")
         end
       end
       type = bson_type(v)
